# otus_hw1

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  install_manifest.txt
cmake/: gtest.cmake  gtest_download.cmake
lib/: hello_func.cpp  hello_func.h  version.h  version.h.in
src/: program.cpp
test/: CMakeLists.txt
test/src/: LibVersion_Test.cpp  Main_TestAll.cpp
